--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
             <version>2.6.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.24</version>
+        </dependency>
     </dependencies>
 
     <build>
